--- a/Osa7/bloglist-frontend_o7/package.json
+++ b/Osa7/bloglist-frontend_o7/package.json
@@ -50,5 +50,8 @@
     "cypress": "^9.6.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^26.1.5"
-  }
+  },
+  "eslintIgnore": [
+    "*.test.js"
+  ]
 }
