--- a/Osa8/library-backend/package.json
+++ b/Osa8/library-backend/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.7.0",
-    "graphql": "^16.5.0"
+    "dotenv": "^16.0.1",
+    "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.4"
   }
 }
