--- a/Osa8/library-backend/package.json
+++ b/Osa8/library-backend/package.json
@@ -10,10 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.13",
     "apollo-server": "^3.7.0",
+    "apollo-server-core": "^3.7.0",
+    "apollo-server-express": "^3.7.0",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "graphql-subscriptions": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.4",
+    "subscriptions-transport-ws": "^0.11.0"
   }
 }
