--- a/Osa9/First_TS/package.json
+++ b/Osa9/First_TS/package.json
@@ -6,13 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "ts-node": "ts-node",
-    "calculateBmi": "ts-node calculateBmi.ts"
+    "calculateBmi": "ts-node calculateBmi.ts",
+    "calculateExercises": "ts-node exerciseCalculator.ts",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-deb index.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.35",
     "ts-node": "^10.8.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
