--- a/Osa9/flight_diaries/.eslintrc
+++ b/Osa9/flight_diaries/.eslintrc
@@ -25,6 +25,10 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "parserOptions": {
+      "project": "tsconfig.json",
+      "tsconfigRootDir": "__dirname",
+      "sourceType": "module"
+    }
   }
 }
